--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,4 +1,5 @@
 <%= form_for(@post) do |f| %>
+<%= form_for @post, url: student_path(@user), html: { method: :put } do |f|
   <label>Post title:</label><br>
   <%= f.text_field :title %><br>
 
